# Administracion-de-Modelos

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
AMq2_TP/: .env  README.md  docker-compose.yaml  docker-compose.yml
AMq2_TP/airflow/config/: airflow.cfg
AMq2_TP/airflow/dags/: etl_process.py  process.py
AMq2_TP/app/: Dockerfile  app.py  fapi_app.py  requirements.txt
AMq2_TP/app/model/: model.pkl  scaler.pkl
AMq2_TP/app/utils/: functions.py  sample_values.csv
AMq2_TP/minio/: Dockerfile
AMq2_TP/mlflow/: Dockerfile
AMq2_TP/postgres/: Dockerfile
AMq2_TP/redis/: Dockerfile
AMq2_TP/web/: Dockerfile  index.php
MetaFlow/: .env  README.md  docker-compose.yaml  knn_model.pkl  reglog_model.pkl  requirements.txt  svc_model.pkl  tree_model.pkl
MetaFlow/dockerfiles/postgres/: Dockerfile  metaflow.sql
MetaFlow/docs/source/: index.rst  primeros pasos.rst  same_like_redis.rst
MetaFlow/metaflow/: batch_processing.py  train_models.py
MetaFlow/metaflow/code_to_fix/: aux_code_knn_and_reglog.py
MetaFlow/notebook_redis_out/: redis_out.ipynb  same_like_redis.py
airflow/dags/: dag1.py  reglog_dag.py
dags/: reglog_dag.py
dockerfiles/airflow/: Dockerfile  requirements.txt
dockerfiles/mlflow/: Dockerfile
mlflow/: Dockerfile  notas_de_un_contenedor.txt  requirements.txt
mlflow/experiments/data/: Distributions.py  HeatMap.py
mlflow/experiments/models/: KNN.py  (+5 more)
servicio-ml/: .env  docker-compose.yaml
servicio-ml/notebooks/: RegLog.py  optuna_aux.py  plots.py  train_rain_in_australia.ipynb
(+197 files in other folders)
